--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ h3 {
 .menu {
   display: flex;
   list-style: none;
-  justify-content: space-evenly;
+  justify-content: center;
   background-color: rgb(15, 15, 15);
   height: 50px;
   color: rgb(255, 255, 255);
@@ -154,8 +154,14 @@ h3 {
   margin-top: 0;
   position: fixed;
   top: 70px;
-  width: 100vw;
+  right:0 ;
+  left:177px;
+  bottom: 0;
+  width: 100%;
   z-index: 100;
+}
+.menu li{
+  margin-right: 120px;
 }
 
 .inner-nav > ul > li:hover {
