--- a/css/style.css
+++ b/css/style.css
@@ -383,6 +383,7 @@ span {
   background-color: rgb(230, 230, 241) !important;
   color: black;
 }
+
 .d_mode.left a,
 .d_mode.left i,
 .d_mode .contenedor-logo .boton-menu i,
@@ -393,4 +394,4 @@ span {
 .d_mode .video_tex p span {
   color: black;
 }
-
+/*////////////////*************-/////////////*/
